--- a/debugtoolplatform/ElectronApp/DeskPlatform/plugins/Test/render.cfg
+++ b/debugtoolplatform/ElectronApp/DeskPlatform/plugins/Test/render.cfg
@@ -1,4 +1,10 @@
 {
 "extension":"demorender",
-"url":"index.html"
+"url":"index.html",
+"createMenus":[
+{
+"title":"DemoFile",
+"file":"data/tpl.json"
+}
+]
 }
