--- a/tarot/bin/h5/data/cardconfig.json
+++ b/tarot/bin/h5/data/cardconfig.json
@@ -164,7 +164,7 @@
         "keyword": "骤变、灾难、破坏、意外",
         "astrology": "火星",
         "ingredient": "火",
-        "description": "大阿尔卡那的恶魔在沟通和内容上与第6张恋人相互照映，只是天使变成了恶魔，浪漫的爱情沦为彼此对欲望的沉迷。恶魔面目狰狞，生着蝙蝠一样的翅膀，另外生着羊角，羊腿和乌足，象征动物的本性与天性。他的驴耳象征着固执。头顶倒立的五角星指向地面，代表物质世界。他右手向上摆出魔鬼法的姿势，与教主的祝福手势成对比。手心的符号代表土星，实现质与堕落之星。魔鬼左手拿着火把，同样向下指着物质世界，似乎在煽动着亚当的欲望， 这与亚当尾巴上的火焰相互应着。\n\t此时亚当和夏娃由于对欲望的沉迷，再也没有办法听到天使的祝福，耳边只有来自地狱恶魔的诅咒，原有的浪漫与温馨也已变成了彼此的束缚，就像彼此颈上的枷锁，将彼此牢牢地拴在恶魔的脚下。亚当一如既往的注视着夏娃，而夏娃则低垂粉颈，无奈地看着颈上的铁条。原有物质、精神、道德的循环已被颠覆，剩下的仅是对物质和欲望的沉迷；原有感性与理性之间的交流也已被阻断，变成了彼此的枷锁。",
+        "description": "一座崎立于山颠的高塔正受雷击，即将毁灭。高塔象征物质，高塔顶跌落的皇冠代表治和的成就。天上的雷，是来自上帝的言语，人从高塔上摔下，象征着人类即使有再大的本事依然敌不过自然的力量，违逆不过上帝的旨意。高耸的高塔和皇冠，象征着人类的高傲和自满，这是遭受毁灭的本因。让人联想起圣经中的巴别高塔。图中雷溅起的火花有22个，象征塔罗牌22张大牌。云是灰色的，呈现突儿的形状，象征灾难，在自然规律的上帝面前，人是平等的。整张牌黑色的背景，预示了一段黑色的时期。\n在大阿卡纳中，高塔牌是最没有好意的一张牌，也是宗教意义很重的一张，提醒自省的意义便相应的强烈了。但同时也需明白没有非常的破坏，就没有非常的建设，解脱高塔的牢笼，未尝不是置之死地而后生？逆位的高塔牌与正位的类似但改变不如正位剧烈。有时候压仰控制事态的发展不一定是好事，更有可能把自己囚禁在高塔中。",
         "normal": "基本含义——麻烦不中断、遭遇逆境、遭受打击、原有信念崩溃、遭遇突发事件、多管闲事、与人发生纷争。\n恋爱婚姻——意外的分手、与爱人发生争执、失去爱情、感情不能得到亲朋的祝福。\n工作学业——事态急剧恶化、对上司不满却苦无应对之法、碰到灾难、事业遭遇意外瓶颈、成绩低落、因意外事故辍学、因闯祸而被记过、考试不及格、落榜。\n人际财富——损失金钱、财政赤字、破产，遭受连累、与人发生争执、因口角与人绝交、急躁易怒以致伤人。\n健康生活——疾病轻易恶化、易烫伤或刀伤。\n其　　他——遭遇意外、多管闲事、卷入纷争。",
         "invert": "基本含义——悬崖勒马、遭遇口舌之灾、发生内部纠纷、风暴前的寂静。\n恋爱婚姻——直接表达心意、遭遇感情危机、重新体验浪漫激情、预感将要分手、感情上遭受打击。\n工作学业——面对困刺耳逆耳天由命、大意失荆州、因紧张导致终极的失败、业绩不佳，考试因紧张致使成绩不佳、成绩下滑。\n人际财富——从新开始积攒、表面富有实则捉襟见肘、濒临破产，关系陷入僵局的前兆、与朋友纠纷不中断、逞强好胜不知让步。\n健康生活——遵医嘱可是病痛早日远去、身体状况开始好转、平日不注重自身健康。\n其　　它——后悔的出行或派对、狂风雨来临之前的压抑、令人震动的事情。",
         "image": "tower" 
