--- a/debugtoolplatform/ElectronApp/DeskPlatform/plugins/AnswerFlow/render.cfg
+++ b/debugtoolplatform/ElectronApp/DeskPlatform/plugins/AnswerFlow/render.cfg
@@ -1,11 +1,16 @@
 {
-"extension":"ansflow",
+"extension":"ansflow,qgame",
 "url":"index.html",
 "createMenus":[
 {
 "title":"AnsFlowFile",
 "file":"data/tpl.json",
 "extension":"ansflow"
+},
+{
+"title":"QGameFile",
+"file":"data/qgametpl.json",
+"extension":"qgame"
 }
 ]
 }
